# obj-loader-c

./: .clangd  README.md  main.c  objloader.h
test/: CMakeLists.txt  Shader.cpp  camera.cpp  glad.c  main.cpp
test/include/: camera.h  objloader.h  shader.h
test/include/glad/: glad.h
